samples/_failures_safe/1761492018_3444d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3dec3b8.c: In function ‘main’:
./samples/SAFE/__tmp_a3dec3b8.c:166:25: error: missing terminating " character
  166 |         fprintf(stderr, "Error reading
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_a3dec3b8.c:166:9: error: expected expression at end of input
  166 |         fprintf(stderr, "Error reading
      |         ^~~~~~~
./samples/SAFE/__tmp_a3dec3b8.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3dec3b8.c:166:9: error: expected declaration or statement at end of input
